<resources>
    <string name="app_name">SysBusApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_favoritos">Favoritos</string>
    <string name="nav_item_reclamacoes">Reclamações</string>
    <string name="nav_item_configuracoes">Configurações</string>
    <string name="nav_item_configuracoes2">Configurações 2</string>
    <string name="nav_item_desconectar">Desconectar</string>

    <string name="reclamado">Reclamado</string>
    <string name="origem_reclamacao">Origem da reclamação</string>

    <string name="fazer_login">Fazer login</string>
    <string name="cadastrar_se">Cadastrar-se</string>

    <string name="nenhum_favorito_adicionado">Nenhum favorito adicionado</string>
    <string name="nenhuma_com_localizacao_informada">Não há linhas com localização informada</string>
    <string name="nenhuma_linha_proxima">Não há linhas próximas a você</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_favoritos</item>
        <item>@string/nav_item_reclamacoes</item>
        <item>@string/nav_item_configuracoes</item>
        <item>@string/nav_item_configuracoes2</item>
        <item>@string/nav_item_desconectar</item>
    </string-array>

    <string-array name="objeto_reclamado_valores">
        <item name="selecione">Selecione</item>
        <item name="cobrador">Cobrador</item>
        <item name="motorista">Motorista</item>
        <item name="veiculo">Veículo</item>
        <item name="outros">Outros</item>
    </string-array>

    <string-array name="distancia_linhas_proximas_labels">
        <item name="um_km">1km</item>
        <item name="dois_km">2km</item>
        <item name="tres_km">3km</item>
        <item name="quatro_km">4km</item>
        <item name="cinco_km">5km</item>
        <item name="seis_km">6km</item>
        <item name="sete_km">7km</item>
        <item name="oito_km">8km</item>
    </string-array>

    <string-array name="distancia_linhas_proximas_valores">
        <item name="um_km">1</item>
        <item name="dois_km">2</item>
        <item name="tres_km">3</item>
        <item name="quatro_km">4</item>
        <item name="cinco_km">5</item>
        <item name="seis_km">6</item>
        <item name="sete_km">7</item>
        <item name="oito_km">8</item>
    </string-array>

    <string name="title_home">Home</string>
    <string name="title_favoritos">Favoritos</string>
    <string name="title_reclamacoes">Reclamações</string>
    <string name="title_configuracoes">Configurações</string>
    <string name="title_desconectar">Desconectar</string>
    <string name="linha">Linha</string>
    <string name="placa">Placa</string>
    <string name="detalhes">Detalhes</string>
    <string name="data_ocorrencia">Data da ocorrência</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="acessar">Acessar</string>
    <string name="esqueci_senha">Esqueci a senha</string>
    <string name="nome">Nome</string>
    <string name="cancelar">Cancelar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="novo_usuario">Novo usuário</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="salvar">Salvar</string>
    <string name="action_linhas_proximas_a_mim">Linhas próximas a mim</string>
    <string name="action_todas_as_linhas">Todas as linhas</string>
    <string name="action_nova_reclamacao">Nova reclamação</string>
    <string name="action_progress_bar">Aguarde</string>

</resources>
